# obs-srtla-sender-plugin

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: FindOBS.cmake
data/locale/: en-US.ini
src/: network-monitor.cpp  network-monitor.h  plugin-main.cpp  srtla-relay.cpp  srtla-relay.h
